# client

./: CMakeLists.txt  README.md
include/: ChatArea.h  ConversationList.h  MainFrame.h
include/model/: Persistance.h
include/view/: ChatArea.h  MainFrame.h  MessageList.h  MessageWritingBox.h  ServerList.h
include/view/components/: ChatArea.h  MessageList.h  MessageWritingBox.h
include/view/containers/: MainArea.h  SideBar1.h  SideBar2.h
include/view/top/: ControlArea.h  MainArea.h  MainFrame.h  SideBar1.h  SideBar2.h
src/: App.cpp  ChatArea.cpp  ConversationList.cpp  MainArea.cpp  MainFrame.cpp  MessageList.cpp  MessageWritingBox.cpp  Persistance.cpp  ServerList.cpp
src/controller/: ChatController.cpp  ChatController.h  MessageController.cpp  MessageController.h  ServerController.cpp  ServerController.h  UserController.cpp  UserController.h
src/integration/: FakeDatabase.cpp  FakeDatabase.h  Persistance.h
src/model/: App.cpp  App.h  Chat.cpp  Chat.h  Entity.h  Message.cpp  Message.h  Persistance.cpp  Server.cpp  Server.h  SessionState.cpp  SessionState.h  User.cpp  User.h
src/util/: Logger.cpp  Logger.h  Observable.h
src/view/: Component.cpp  Component.h  MainFrame.cpp  MainFrame.h  Navigation.cpp  Navigation.h  Navigator.cpp  Navigator.h
src/view/components/: ChatArea.cpp  ChatArea.h  ControlArea.cpp  ControlArea.h  ConversationList.cpp  ConversationList.h  ConversationView.cpp  ConversationView.h  MessageList.cpp  MessageList.h  MessageWritingBox.cpp  MessageWritingBox.h  NavBar.cpp  NavBar.h  ServerList.cpp  ServerList.h  ServerView.cpp  ServerView.h
src/view/containers/: ControlArea.cpp  MainArea.cpp  MainArea.h  SideBar1.cpp  SideBar2.cpp
src/view/pages/: AuthenticationPage.cpp  AuthenticationPage.h  MainPage.cpp  MainPage.h  SettingsPage.cpp  SettingsPage.h
